Fix info on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -320,6 +320,7 @@ body {
   padding-left: 20px;
   padding-right: 20px;
 }
+
 .marginright {
   margin-right: 2%;
 }
@@ -336,6 +337,7 @@ body {
 @media only screen and (max-width: 600px) {
   .objektBackground {
     width: 100%;
+    min-width: 0px;
   }
 
 }
@@ -344,7 +346,7 @@ body {
     display: block;
      width: 100%;
      max-width: 500px;
-      min-width: 400px;
+      min-width: 300px;
      padding: 30px;
      
      color: white;
